--- a/Pages/Presentation.html.html
+++ b/Pages/Presentation.html.html
@@ -11,6 +11,13 @@
         <h2>Jonathan Svahn</h2>
         
         <ul>
+           	<li><a href="P:\webbprogramering\1Dv435_js223ei\Videos\index.html.html">Start</a></li>
+            <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Lagorationer.html">Laborationer</a></li>
+            <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html.html">Presentation</a></li>
+            <li><a href="">Kontakt</a></li>
+    	</ul>
+        
+        <ul>
         	<li>Intressen</li>
             	<dl>
                 	<dt>Mina intressen är</dt>
