--- a/Pages/Presentation.html.html
+++ b/Pages/Presentation.html.html
@@ -9,6 +9,8 @@
     <body>
     	<h1>Personlig presentation</h1>
         <h2>Jonathan Svahn</h2>
+        	
+        	<img src="pics/jonathan.jpg" alt="" />
         
         <ul>
            	<li><a href="P:\webbprogramering\1Dv435_js223ei\Videos\index.html.html">Start</a></li>
