--- a/Pages/Lagorationer.html
+++ b/Pages/Lagorationer.html
@@ -3,7 +3,7 @@
 	<head>
     	<meta charset="utf-8" />
         <title>Uppgft 1.3</title
-    </head>
+    ></head>
    
     <body>
     	
@@ -11,7 +11,7 @@
         <p>Jonathan Svahn´s blogg</p>
         	
         <ul>
-           	<li><a href="P:\webbprogramering\1Dv435_js223ei\Videos\index.html.html">Start</a></li>
+           	<li><a href="../index.html.html">Start</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Lagorationer.html">Laborationer</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html.html">Presentation</a></li>
             <li><a href="">Kontakt</a></li>
