--- a/Pages/Presentation.html.html
+++ b/Pages/Presentation.html.html
@@ -13,7 +13,7 @@
         	<img src="pics/jonathan.jpg" alt="" />
         
         <ul>
-           	<li><a href="P:\webbprogramering\1Dv435_js223ei\Videos\index.html.html">Start</a></li>
+           	<li><a href="../index.html.html">Start</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Lagorationer.html">Laborationer</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html.html">Presentation</a></li>
             <li><a href="">Kontakt</a></li>
