--- a/Pages/Presentation.html
+++ b/Pages/Presentation.html
@@ -13,9 +13,9 @@
         	<img src="pics/jonathan.jpg" alt="" />
         
         <ul>
-           	<li><a href="../index.html.html">Start</a></li>
+           	<li><a href="../index.html">Start</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Lagorationer.html">Laborationer</a></li>
-            <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html.html">Presentation</a></li>
+            <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html">Presentation</a></li>
             <li><a href="">Kontakt</a></li>
     	</ul>
         
