--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
         <ul>
            	<li><a href="P:\webbprogramering\1Dv435_js223ei\Videos\index.html">Start</a></li>
-            <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Lagorationer.html">Laborationer</a></li>
+            <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Laborationer.html">Laborationer</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html">Presentation</a></li>
             <li><a href="">Kontakt</a></li>
     	</ul>
