--- a/Pages/Laborationer.html
+++ b/Pages/Laborationer.html
@@ -19,7 +19,7 @@
            	<li><a href="../index.html">Start</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Laborationer.html">Laborationer</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html">Presentation</a></li>
-            <li><a href="">Kontakt</a></li>
+            <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\kontakt.html">Kontakt</a></li>
     	</ul>	
         
         <h2>Webteknisk introduktion</h2>
