--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            
            <nav> 
         	<ul>
-           	<li class="active"><a href="P:\webbprogramering\1Dv435_js223ei\Videos\index.html">Start</a></li>
+           	<li class="active><a href="P:\webbprogramering\1Dv435_js223ei\Videos\index.html">Start</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Laborationer.html">Laborationer</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html">Presentation</a></li>
             <li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\kontakt.html">Kontakt</a></li>
