--- a/Pages/kontakt.html
+++ b/Pages/kontakt.html
@@ -80,7 +80,7 @@
     	</content>
         </div>
         
-        <div id="footer">Hej</div>
+        <div id="footer">Gjord av jonathan svahn</div>
         </div>
     
     </body>
