--- a/Pages/Presentation.html
+++ b/Pages/Presentation.html
@@ -15,7 +15,7 @@
         	<div id="header">
             <header>
     
-     	<h1>Jonathan Svahn´s blogg</h1>
+     	<h1>Svahn´s blogg</h1>
         	</header>
             </div>
             
