--- a/Pages/kontakt.html
+++ b/Pages/kontakt.html
@@ -3,6 +3,7 @@
 <html lang="sv">
 
 	<head>
+    	<title>Jonathan Svahn</title>
     	<meta charset="utf-8" />
         
         <link rel="stylesheet" href="../css/css.css" />
