--- a/Pages/kontakt.html
+++ b/Pages/kontakt.html
@@ -24,10 +24,10 @@
        	 	
         	<nav>
         		<ul>
-           		<li><a href="../index.html">Start</a></li>
-            	<li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Laborationer.html">Laborationer</a></li>
-            	<li><a href="P:\webbprogramering\1Dv435_js223ei\Pages\Presentation.html">Presentation</a></li>
-            	<li class="active"><a href="P:\webbprogramering\1Dv435_js223ei\Pages\kontakt.html">Kontakt</a></li>
+           		<li><a id="home" href="../index.html">Start</a></li>
+            	<li><a id="lab" href="Laborationer.html">Laborationer</a></li>
+            	<li><a id="pres" href="Presentation.html">Presentation</a></li>
+            	<li class="active"><a id="kontaktactive" href="kontakt.html">Kontakt</a></li>
     			</ul>
             </nav>
         
